--- a/styles/secondarypages.css
+++ b/styles/secondarypages.css
@@ -5,7 +5,7 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
 }
 
 .contact {
-  background-color: #FFFF00;
+  background-color: #FFFFFF;
   text-align: center;
 }
 
@@ -13,7 +13,7 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   padding-top: 30px;
 }
 .contact .content {
-  margin-bottom: 450px;
+  margin-bottom: 400px;
 }
 .contact #horiz li {
   display: inline;
@@ -31,9 +31,19 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
 }
 .about .header li {
   display: inline;
+  margin-left: 10px;
+  margin-right: 20px;
 }
 .about .header ul {
   margin-left: 0px;
+}
+
+.about .header a {
+  color: #669900;
+}
+
+.about .header a:hover {
+  color: blue;
 }
 .about .content h3 {
   width: 60%;
@@ -41,16 +51,32 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   margin-bottom: 25px;
 }
 .about .content h4 {
-  color: #FFFF00 ;
+  /*color: #FFFF00;*/
+  color: #669900;
 }
 .about .content li {
   margin-left: 30px;
+}
+.about .content a {
+  color: #669900;
+}
+
+.about .content a:hover {
+  color: blue;
+}
+
+.about .content .boundary {
+    border: 1px solid gray;
+}
+.techskills {
+  background-color: #FFFFFF;
+  text-align: center;
 }
 .techskills .spacing {
   margin-top: 15px;
 }
 .techskills .container {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 .techskills #horiz {
   margin-top:30px;
