--- a/styles/secondarypages.css
+++ b/styles/secondarypages.css
@@ -13,14 +13,15 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   padding-top: 30px;
 }
 .contact .content {
-  margin-bottom: 400px;
+  margin-bottom: 350px;
+  list-style-type: none;
 }
 .contact #horiz li {
   display: inline;
 }
 
 .about {
-  background-color: #FFFFFF;
+  background-color: #bbc2c1;
 }
 .about .header {
   text-align: center;
