changed fonts, layout and colors

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,20 +59,21 @@ body {
 }
 
 .content {
-  /*background-color: #33CCFF;*/
   margin: 0 auto 0 auto;
   width: 100%;
 }
 
-#contentBox {
-  border: 1px solid black;
-
+#contentBox1 {
+  border: 1px solid #5f5e5f;
+  font-family:'Special Elite', cursive;
+  padding: 10px;
 }
 #column1 {
   float:left;
   margin-left: 50px;
   width:22%;
   color: #444444;
+  margin-right: 40px;
 }
 #column1 p {
   padding: 10px 20px 20px 0px;
@@ -83,19 +84,37 @@ body {
   margin-left: 20px;
 }
 #column1 .image_sizing {
-  border: 1px solid black;
+  border: 1px solid #5f5e5f;;
   margin-bottom: 15px;
+}
+#column1 a {
+  color: #FF9900;
 }
 #column2 {
   float:left;
   margin-left: 50px;
-  width: 25%;
+  width: 24%;
 }
 #column2 .image_sizing {
-  height: 145px;
-  width: 260px;
-  border: 1px solid black;
+  height: 148px;
+  width: 273px;
+  border: 1px solid #5f5e5f;;
   margin-left: 15px;
+  margin-bottom: 15px;
+}
+#column2 p {
+  padding: 5px 10px 20px 0px;
+  margin-left: 10px;
+}
+#column2 ul {
+  margin-left: 20px;
+}
+#contentBox2 {
+  margin-left: 16px; 
+  border: 1px solid #5f5e5f;
+  font-family:'Special Elite', cursive;
+  padding: 20px;
+  margin-right: 5px;
 }
 #column3 {
   float:left;
