--- a/styles/secondarypages.css
+++ b/styles/secondarypages.css
@@ -28,6 +28,10 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
 .contact #horiz a {
   color: #669900;
 }
+.contact #resizing {
+  height: 50px;
+  width: 100px;
+}
 .about {
   background-color: #bbc2c1;
 
