changed code to address the undesirable resizing of the photo on the main page when viewed in safari and firefox

--- a/styles/main.css
+++ b/styles/main.css
@@ -73,3 +73,17 @@ img {
     margin-left: 600px;
     margin-top: 150px;
 }
+/*.bounding-box {
+  background-image: url("images/bobnmad.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}*/
+.bounding-box {
+  background-image: url("images/bobnmad.png");
+  background-size: contain;
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+}
