made header elements consistent; added re-sized images

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,12 +12,12 @@ h3 {
 h3 a {
   color: #FF9900;
 }
-.header {
+header {
   font-family: 'Finger Paint', cursive;
   margin-top: 25px;
   margin-bottom: 40px;
 }
-.header h2 {
+header h2 {
   font-family: 'Finger Paint', cursive;
    font-size: 50px;
    color: #5f5e5f;
@@ -25,14 +25,14 @@ h3 a {
    text-align: center;
    margin-bottom: 20px;
 }
-.header h3 {
+header h3 {
    font-family: 'Finger Paint', cursive;
    font-size: 30px;
    color: #5f5e5f;
    font-style: italic;
    text-align: center;
 }
-.header img {
+header img {
   margin: 0 auto 0 auto;
   display: block;
 }
@@ -50,7 +50,10 @@ h3 a {
   color: #FF9900;
   text-decoration: none;
 }
-
+.nav a:hover {
+  color: #245580;
+  text-decoration: underline;
+}
 
 .content {
   margin-left: 100px;
@@ -67,10 +70,12 @@ h3 a {
 #contentBox1 {
   background-color: white;
   font-family:'PT Sans', sans-serif;
-  /*padding: 10px;*/
-  /*padding: 12px; 8?
-  /*margin-right: 5px;*/
 }
+#contentBox1 a:hover {
+  color: #245580;
+  text-decoration: underline;
+}
+
 #column1 p {
   padding: 10px 20px 20px 10px;
   /*margin-left: 10px;*/
@@ -85,6 +90,7 @@ h3 a {
 }
 #contentBox1 a {
   color: #FF9900;
+    text-decoration: none;
 }
 #column2 {
   float:left;
@@ -131,6 +137,14 @@ h3 a {
   font-family:'PT Sans', sans-serif;
   /*padding: 12px;
   margin-right: 23px;*/
+}
+#contentBox3 a:hover {
+  color: #245580;
+  text-decoration: underline;
+}
+#contentBox3 a {
+  color: #FF9900;
+  text-decoration: none;
 }
 #column3 p {
   padding: 5px 10px 20px 10px;
