--- a/styles/about.css
+++ b/styles/about.css
@@ -3,12 +3,12 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   border: 0;
   margin: 0;
 }
-.header {
+header {
     font-family: 'Finger Paint', cursive;
     margin-top: 25px;
     margin-bottom: 25px;
 }
-.header h2 {
+header h2 {
    font-family: 'Finger Paint', cursive;
    font-size: 50px;
    color: #5f5e5f;
@@ -16,13 +16,14 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
    text-align: center;
     margin-bottom: 20px;
 }
-.header h3 {
+header h3 {
+   font-family: 'Finger Paint', cursive;
    font-size: 30px;
    color: #5f5e5f;
    font-style: italic;
    text-align: center;
 }
-.header img {
+header img {
   margin: 0 auto 0 auto;
   display: block;
 }
@@ -43,6 +44,10 @@ a {
   font-family:'PT Sans', sans-serif;
   color: #5f5e5f;
 }
-
+@media (max-width: 767px){
+  .img-responsive {
+    max-width: 70%;
+  }
+}
 
 
