--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,12 +3,12 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   border: 0;
   margin: 0;
 }
-.header {
+header {
   font-family: 'Finger Paint', cursive;
   margin-top: 25px;
   margin-bottom: 25px;
 }
-.header h2 {
+header h2 {
     font-family: 'Finger Paint', cursive;
    font-size: 50px;
    color: #5f5e5f;
@@ -16,14 +16,14 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
    text-align: center;
    margin-bottom: 20px;
 }
-.header h3 {
+header h3 {
    font-family: 'Finger Paint', cursive;
    font-size: 30px;
    color: #5f5e5f;
    font-style: italic;
    text-align: center;
 }
-.header img {
+header img {
   margin: 0 auto 0 auto;
   display: block;
 }
@@ -43,15 +43,7 @@ img {
   color: #5f5e5f;
   font-family:'PT Sans', sans-serif;
 } 
-.content {
-  /*margin-left: 270px;*/
-  /*width: 100%;*/
-}
-.boxes {
-  /*float: left;
-  display: inline-block;*/
-  padding: 10px 40px 50px 40px;
-}
+
 #resizing_linked{
   height: 80px;
   width: 90px;
@@ -61,4 +53,5 @@ img {
   height: 80px;
   width: 90px;
   padding-top: 18px;
+  margin-bottom: 13px;
 }
