--- a/styles/resume.css
+++ b/styles/resume.css
@@ -7,29 +7,30 @@ body {
   background-color: white;
   font-family:'PT Sans', sans-serif;
 }
-.header {
+header {
   font-family: 'Finger Paint', cursive;
   margin-top: 25px;
   margin-bottom: 25px;
 }
-.header h2 {
+header h2 {
+   font-family: 'Finger Paint', cursive;
   font-size: 50px;
   color: #5f5e5f;
   font-style: italic;
   text-align: center;
   margin-bottom: 20px;
 }
-.header h3 {
+header h3 {
+   font-family: 'Finger Paint', cursive;
   font-size: 30px;
   color: #5f5e5f;
   font-style: italic;
   text-align: center;
 }
-.header img {
+header img {
   margin: 0 auto 0 auto;
   display: block;
 }
-
 .list-inline li {
   margin-right: 10px;
   font-size: 20px;
@@ -40,36 +41,21 @@ body {
 .text-center h3 {
   margin-top: 25px;
 }
-/*.content {
-  color: #5f5e5f;
-  font-family:'PT Sans', sans-serif;
-}*/
-
-/*#techskills {
-  text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}*/
-
 @media (max-width: 767px) {
   .row ul {
   margin-bottom: 30px;
   }
 }
-
 h3 {
   margin-bottom: 15px;
 }
-
 #experience {
   clear: left;
   text-align: center;
   margin-bottom: 25px;
-
 }
 .paragraphs {
   margin-left: 15px;
-
 }
 .paragraphs h3 {
   margin-bottom: 0px;
@@ -92,4 +78,3 @@ h3 {
   background: #a8b0b5;
   text-decoration: none;
 }
-
