--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,9 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   border: 0;
   margin: 0;
 }
+body {
+  margin-bottom: 100px;
+}
 header {
     font-family: 'Finger Paint', cursive;
     margin-top: 25px;
