--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,6 +3,9 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   border: 0;
   margin: 0;
 }
+body {
+  margin-bottom: 100px;
+}
 h3 {
   text-align: center;
   color: #5f5e5f;
