--- a/styles/resume.css
+++ b/styles/resume.css
@@ -42,33 +42,37 @@ header a {
 }
 .text-center h3 {
   margin-top: 25px;
+  margin-bottom: 15px;
 }
-@media (max-width: 767px) {
+
+@media (max-width: 991px) {
   .row ul {
   margin-bottom: 30px;
   }
-  header li {
-    margin-right: 17px;
-  }
 }
-@media (max-width: 1199px) {
+@media (max-width: 767px) {
   .row ul {
-    margin-bottom: 30px;
+    margin-left: 15px;
   }
-}
-h3 {
-  margin-bottom: 15px;
 }
 #experience {
   clear: left;
   text-align: center;
-  margin-bottom: 25px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+@media (max-width: 767px) {
+  .paragraphs {
+  margin: 0px 50px 20px 15px;
+}
+}
+@media (min-width: 767px) and (max-width: 1401px) {
+  .paragraphs {
+    margin: 0px 150px 20px 150px;
+  }
 }
 .paragraphs {
-  margin: 0px 150px 20px 150px;
-}
-.paragraphs h3 {
-  margin-bottom: 0px;
+  margin-bottom: 25px;
 }
 #buttoncenter {
   text-align: center;
