return the bottom margin between position and links

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -25,6 +25,8 @@ header h3 {
   color: #5f5e5f;
   font-style: italic;
   text-align: center;
+  margin-bottom: 15px;
+
 }
 header img {
   margin: 0 auto 0 auto;
