--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,49 +5,30 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
 }
 body {
   margin-bottom: 100px;
-}
-h3 {
-  text-align: center;
-  color: #5f5e5f;
-  margin-bottom: 30px;
   font-family:'PT Sans', sans-serif;
-}
-h3 a {
-  color: #FF9900;
 }
 header {
   font-family: 'Finger Paint', cursive;
   margin-top: 25px;
   margin-bottom: 40px;
-}
-header h2 {
-  font-family: 'Finger Paint', cursive;
-   font-size: 50px;
-   color: #5f5e5f;
-   font-style: italic;
-   text-align: center;
-   margin-bottom: 20px;
-}
-header h3 {
-   font-family: 'Finger Paint', cursive;
-   font-size: 30px;
-   color: #5f5e5f;
-   font-style: italic;
-   text-align: center;
-}
-header img {
-  margin: 0 auto 0 auto;
-  display: block;
-}
-.nav {
-  list-style-type: none;
+  color: #5f5e5f;
+  font-style: italic;
   text-align: center;
-  margin: 25px 0px 25px 0px;
 }
+h3 {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
 .nav li {
   display: inline;
   padding-right: 45px;
   font-size: 20px;
+  text-align: center;
 }
 .nav a {
   color: #FF9900;
@@ -57,108 +38,146 @@ header img {
   color: #245580;
   text-decoration: underline;
 }
+.content h1 {
+  font-family: 'Finger Paint';
+  color: #5f5e5f;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.content p {
+  font-family: 'Finger Paint';
+  text-align: center;
+  margin-bottom: 20px;
+  color: #5f5e5f;
+}
+#pagegradient {
+  background-image:
+        -webkit-gradient(
+            radial, 
+            50% -50, 
+            300, 
+            50% 0, 
+            0, 
+            from(rgba(230, 237, 241, 0)), 
+            to(rgba(230, 237, 241, 0.8)));
+    
+  height:100%;
+  left:0px;
+  top:0;
+  width: 600px;
 
-.content {
-  margin-left: 100px;
-  /*margin: 0 auto 0 auto;
-  width: 100%;*/
-}
-#column1 {
-  float:left;
-  margin-left: 50px;
-  width:22%;
-  color: #444444;
-  /*margin-right: 40px;*/
-}
-#contentBox1 {
-  background-color: white;
-  font-family:'PT Sans', sans-serif;
-}
-#contentBox1 a:hover {
-  color: #245580;
-  text-decoration: underline;
 }
 
-#column1 p {
-  padding: 10px 20px 20px 10px;
-  /*margin-left: 10px;*/
+.button {
+    top: 100px;
+    left: 200px;
+    display: inline-block;
+    margin: 0px 57% 30px 43%;
+      float: left;
+    
+    -webkit-border-radius: 10px;
+    
+    -webkit-box-shadow: 
+        0px 3px rgba(128,128,128,1), /* gradient effects */
+        0px 4px rgba(118,118,118,1),
+        0px 5px rgba(108,108,108,1),
+        0px 6px rgba(98,98,98,1),
+        0px 7px rgba(88,88,88,1),
+        0px 8px rgba(78,78,78,1),
+        0px 14px 6px -1px rgba(128,128,128,1); /* shadow */
+    
+    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
+
+} 
+
+.button span {
+    background-color: #E8E8E8;
+      float: left;
+    
+    background-image: 
+        /* gloss gradient */
+        -webkit-gradient(
+            linear, 
+            left bottom, 
+            left top, 
+            color-stop(50%,rgba(255,255,255,0)), 
+            color-stop(50%,rgba(255,255,255,0.3)), 
+            color-stop(100%,rgba(255,255,255,0.2))),
+        
+        /* dark outside gradient */
+        -webkit-gradient(
+            linear, 
+            left top, 
+            right top, 
+            color-stop(0%,rgba(210,210,210,0.3)), 
+            color-stop(20%,rgba(210,210,210,0)), 
+            color-stop(80%,rgba(210,210,210,0)), 
+            color-stop(100%,rgba(210,210,210,0.3))),
+        
+        /* light inner gradient */
+        -webkit-gradient(
+            linear, 
+            left top, 
+            right top, 
+            color-stop(0%,rgba(255,255,255,0)), 
+            color-stop(20%,rgba(255,255,255,0.5)), 
+            color-stop(80%,rgba(255,255,255,0.5)), 
+            color-stop(100%,rgba(255,255,255,0))),        
+        
+        /* diagonal line pattern */
+        -webkit-gradient(
+           linear, 
+            0% 100%, 
+            100% 0%, 
+            color-stop(0%,rgba(255,255,255,0)), 
+            color-stop(40%,rgba(255,255,255,0)), 
+            color-stop(40%,#D2D2D1), 
+            color-stop(60%,#D2D2D1), 
+            color-stop(60%,rgba(255,255,255,0)), 
+            color-stop(100%,rgba(255,255,255,0)));
+  
+        -webkit-box-shadow:
+            0px -1px #fff, /* top highlight */
+            0px 1px 1px #FFFFFF; /* bottom edge */
+    
+    -webkit-background-size: 100%, 100%, 100%, 4px 4px;
+    
+    -webkit-border-radius: 10px;
+    -webkit-transition: -webkit-transform .1s ease-in-out;
+    
+    display: inline-block;
+    padding: 10px 40px 10px 40px;
+    
+    color: #5f5e5f;
+    text-transform: uppercase;
+ 
+    font-weight: 700;
+    font-size: 24px;
+    text-shadow: 0px 1px #fff, 0px -1px #262F33;
 }
-#column1 ul {
-  margin-left: 20px;
-}
-#column1 .image_sizing {
-  margin-bottom: 15px;
-  height: 148px;
-  width: 263px;
-}
-#contentBox1 a {
-  color: #FF9900;
-    text-decoration: none;
-}
-#column2 {
-  float:left;
-  /*margin-left: 95px;*/
-  margin-left: 50px;
-  width: 24%;
-}
-#contentBox2 {
-  margin-left: 16px; 
-  background-color: white;
-  font-family:'PT Sans', sans-serif;
-  /*padding: 12px;
-  margin-right: 12px;*/
-}
-#column2 p {
-  padding: 5px 10px 20px 10px;
-  /*margin-left: 10px; */
-}
-#column2 ul {
-  margin-left: 20px;
-}
-#column2 .image_sizing {
-  height: 148px;
-  width: 263px;
-  /*border: 1px solid #5f5e5f;*/
-  margin-left: 15px;
-  margin-bottom: 15px;
-}
-.extra {
-  margin: 30px 5px 0px 10px;
-}
-.extra a {
-  color: #FF9900;
-}
-#column3 {
-  float:left;
-  /*margin-left: 110px;*/
-  margin-left: 50px;
-  width:25%;
-}
-#contentBox3 {
-  margin-left: 16px; 
-  background-color: white;
-  font-family:'PT Sans', sans-serif;
-  /*padding: 12px;
-  margin-right: 23px;*/
-}
-#contentBox3 a:hover {
-  color: #245580;
-  text-decoration: underline;
-}
-#contentBox3 a {
-  color: #FF9900;
-  text-decoration: none;
-}
-#column3 p {
-  padding: 5px 10px 20px 10px;
-  /*margin-left: 10px; */
-}
-#column3 ul {
-  margin-left: 20px; 
-}
-#column3 .image_sizing {
-  height: 148px;
-  width: 273px;
-  margin-left: 15px;
-  margin-bottom: 15px;
-}
+
+        .button span:hover {
+            color:  #FF9900;
+            text-shadow: 0px -1px #97A63A;
+            cursor: pointer;
+        }
+
+        .button:active {
+            -webkit-box-shadow: 
+                0px 3px rgba(128,128,128,1),
+                0px 4px rgba(118,118,118,1),
+                0px 5px rgba(108,108,108,1),
+                0px 6px rgba(98,98,98,1),
+                0px 7px rgba(88,88,88,1),
+                0px 8px rgba(78,78,78,1),
+                0px 10px 2px 0px rgba(128,128,128,.6); /* shadow */
+        }
+
+        .button:active span{
+            -webkit-transform: translate(0, 5px); /* depth of button press */
+        }
+
+        .button span span::selection {
+          color: #E8E8E8;
+
+      }
