font changes to apps and code.css

--- a/styles/code.css
+++ b/styles/code.css
@@ -5,6 +5,7 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
 }
 body {
   margin-bottom: 100px;
+  font-family:'PT Sans', sans-serif;
 }
 h3 a {
   color: #FF9900;
