--- a/styles/main.css
+++ b/styles/main.css
@@ -3,25 +3,52 @@ html, body, h1, h2, h3, h4, ul, ol, li, p, a {
   border: 0;
   margin: 0;
 }
+
 body {
   margin-bottom: 100px;
 }
+
+.fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  background-color: #FF9900;
+}
+
+.menu-items li {
+  margin: 10px;
+  display: inline-block;
+}
+
+.menu-items a {
+  font-family: 'Finger Paint', cursive;
+  color: white;
+  font-size: 1.25em;
+}
+
 header {
-    font-family: 'Finger Paint', cursive;
-    margin-top: 25px;
-    margin-bottom: 50px;
+  font-family: 'Finger Paint', cursive;
+  margin-top: 75px;
+  margin-bottom: 30px;
 }
+
 header h2 {
-   font-family: 'Finger Paint', cursive;
-   font-size: 50px;
-   color: #5f5e5f;
-   font-style: italic;
-   text-align: center;
-   margin-bottom: 20px;
+  font-family: 'Finger Paint', cursive;
+  font-size: 3em;
+  color: #5f5e5f;
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 20px;
 }
+
 header h3 {
    font-family: 'Finger Paint', cursive;
-   font-size: 30px;
+   font-size: 1.75em;
    color: #5f5e5f;
    font-style: italic;
    text-align: center;
@@ -31,7 +58,7 @@ header img {
   display: block;
 }
 
-li {
+/*li {
   margin-top: 25px;
   margin-right: 10px;
 
@@ -41,13 +68,76 @@ a {
   font-family: 'Finger Paint', cursive;
   font-size: 20px;
 
+}*/
+.image-container {
+  /*height:300px;*/
+  height: 30%;
+  width: 50%;
+  /*width:450px;*/
+  margin-right: auto;
+  margin-left: auto;
 }
-img {
-  margin-top: -15px;
+  /*margin-top: -15px;*/
+#image-pic {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
 }
-@media (max-width: 767px) {
+
+.content {
+  margin-top: 25px;
+  margin-right: 28%;
+  margin-left: 31%;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1em;
+  color: #5f5e5f;
+}
+.content p {
+  margin-top: 10px;
+  line-height: 200%;
+}
+
+p::first-letter { 
+    font-size: 200%;
+    }
+/*@media (max-width: 767px) {
   .img-responsive {
     max-width: 70%;
   }
+}*/
+@media (max-width: 767px) {
+  header h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
 }
+  header h3 {
+    font-size: 1.25em;
+  }
+  .content {
+    margin-right: 13%;
+    margin-left: 15%;
+    line-height: 120%;
 
+  }
+  .fixed-nav-bar {
+    height: 62px;
+  }
+/*  header {
+    margin-top: 100px;
+  }*/
+  .menu-items li {
+    margin-right: 20px;
+    margin-bottom: 5px;
+    line-height: 80%;
+}
+  .menu-items a {
+  font-size: 1.3em;
+
+}
+}
+@media (min-width: 768px) and (max-width: 1000px) {
+    .content {
+      margin-right: 22%;
+    margin-left: 25%;
+
+}
